# remote-camera

./: remote_update.sh
client/: manual_client.py  messsagetypes.py  read_raw.py  settings.py
server/: CMakeLists.txt  capture_example.cpp  checks.cpp  checks.h  constants.h  main.cpp  rc_utils.cpp  rc_utils.h  remote_update.sh  servers.h
